[project]
name = "erpnext_china"
authors = [
    { name = "digitii", email = "lingyu_li@foxmail.com"}
]
description = "a"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    "pandas~=2.2.0",
    "pycryptodome~=3.20.0",
    "xmltodict~=0.13.0"
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

# These dependencies are only installed when developer mode is enabled
[tool.bench.dev-dependencies]
# package_name = "~=1.1.0"
